src/test/resources/tests/23_error_type_mismatch.expected
Runtime error: Runtime Error at line 4:6: Addition requires both operands to be numbers or both to be strings. Got string + number
