src/test/resources/tests/23_error_type_mismatch.pt
// Test: Type error - adding string + number should error
x = "hello"
y = 5
PRINT(x + y)
